// Interfaces des produits
public interface IBancaireRIB
{
    string GenererRIB();
}