public class AttestationParticulier : IBancaireAttestation
{
    public string GenererAttestation()
    {
        return "Attestation Particulier: Format standard";
    }
}