public interface IBancaireAttestation
{
    string GenererAttestation();
}
