public class RIBParticulier : IBancaireRIB
{
    public string GenererRIB()
    {
        return "RIB Particulier: Format simplifié";
    }
}